--- a/project05/report/project05.tex
+++ b/project05/report/project05.tex
@@ -51,7 +51,7 @@
 
 \serieheader{High-Performance Computing Lab for CSE}{2024}
             {Student: CARLA JUDITH LOPEZ ZURITA}
-            {Discussed with: FULL NAME}{Solution for Project 5}{}
+            { }{Solution for Project 5}{}
 \newline
 
 \assignmentpolicy
