increase max iters and add prints

--- a/project06/graph_part/notebook.ipynb
+++ b/project06/graph_part/notebook.ipynb
@@ -16,24 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using IJulia"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Infiltrator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Pkg.add(\"Revise\")"
    ]
   },
@@ -44,7 +26,7 @@
    "outputs": [],
    "source": [
     "# I/O packages\n",
-    "using DelimitedFiles, MAT, Revise\n",
+    "using DelimitedFiles, MAT\n",
     "\n",
     "# Math packages\n",
     "using Arpack, LinearAlgebra, Metis, Random, SparseArrays, Statistics\n",
@@ -59,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# include(\"main.jl\");"
+    "# include(\"main_draw.jl\");"
    ]
   },
   {
@@ -74,17 +56,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mesh mesh1e1 done\n",
+      "Mesh mesh2e1 done\n",
+      "Mesh mesh3e1 done\n",
+      "Mesh airfoil1 done\n",
+      "Mesh netz4504_dual done\n",
+      "Mesh stufe done\n",
+      "Mesh 3elt done\n",
+      "Mesh barth4 done\n",
+      "Mesh ukerbe1 done\n",
+      "Mesh crack done\n",
+      "┌───────────────┬────────────┬─────────┬──────────┬──────────┐\n",
+      "│\u001b[32;1m          Mesh \u001b[0m│\u001b[32;1m Coordinate \u001b[0m│\u001b[32;1m   Metis \u001b[0m│\u001b[32;1m Inertial \u001b[0m│\u001b[32;1m Spectral \u001b[0m│\n",
+      "│\u001b[90m               \u001b[0m│\u001b[90m            \u001b[0m│\u001b[90m v.5.1.0 \u001b[0m│\u001b[90m          \u001b[0m│\u001b[90m          \u001b[0m│\n",
+      "├───────────────┼────────────┼─────────┼──────────┼──────────┤\n",
+      "│       mesh1e1 │       18.0 │    17.0 │     20.0 │     18.0 │\n",
+      "│       mesh2e1 │       37.0 │    35.0 │     40.0 │     39.0 │\n",
+      "│       mesh3e1 │       19.0 │    18.0 │     19.0 │     18.0 │\n",
+      "│      airfoil1 │       94.0 │    72.0 │     93.0 │    132.0 │\n",
+      "│ netz4504_dual │       25.0 │    25.0 │     43.0 │     23.0 │\n",
+      "│         stufe │       16.0 │    16.0 │     19.0 │     16.0 │\n",
+      "│          3elt │      172.0 │    92.0 │    218.0 │    117.0 │\n",
+      "│        barth4 │      206.0 │   126.0 │    206.0 │    127.0 │\n",
+      "│       ukerbe1 │       32.0 │    28.0 │     88.0 │     28.0 │\n",
+      "│         crack │      353.0 │   186.0 │    341.0 │    233.0 │\n",
+      "└───────────────┴────────────┴─────────┴──────────┴──────────┘\n"
+     ]
+    }
+   ],
    "source": [
-    "mesh = \"mesh1e1\"\n",
-    "\n",
-    "# List the algorithms to compare\n",
-    "alg = \"Coordinate\"\n",
-    "\n",
-    "# Read data\n",
-    "A, coords = getData(mesh);"
+    "benchmark_bisection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────────────┬────────────┬────────────┬──────────────┬─────────────┬───────────────────┬──────────────────┬──────────┬──────────┬──────────┬──────────┐\n",
+      "│\u001b[36;1m          Mesh \u001b[0m│\u001b[36;1m Coordinate \u001b[0m│\u001b[36;1m Coordinate \u001b[0m│\u001b[36;1m Metis (KWAY) \u001b[0m│\u001b[36;1m Metis(KWAY) \u001b[0m│\u001b[36;1m Metis (RECURSIVE) \u001b[0m│\u001b[36;1m Metis(RECURSIVE) \u001b[0m│\u001b[36;1m Inertial \u001b[0m│\u001b[36;1m Inertial \u001b[0m│\u001b[36;1m Spectral \u001b[0m│\u001b[36;1m Spectral \u001b[0m│\n",
+      "│\u001b[90m               \u001b[0m│\u001b[90m    8 parts \u001b[0m│\u001b[90m   16 parts \u001b[0m│\u001b[90m      8 parts \u001b[0m│\u001b[90m    16 parts \u001b[0m│\u001b[90m           8 parts \u001b[0m│\u001b[90m         16 parts \u001b[0m│\u001b[90m  8 parts \u001b[0m│\u001b[90m 16 parts \u001b[0m│\u001b[90m  8 parts \u001b[0m│\u001b[90m 16 parts \u001b[0m│\n",
+      "├───────────────┼────────────┼────────────┼──────────────┼─────────────┼───────────────────┼──────────────────┼──────────┼──────────┼──────────┼──────────┤\n",
+      "│       mesh3e1 │       75.0 │      118.0 │         71.0 │       187.0 │              74.0 │            111.0 │     90.0 │    159.0 │     92.0 │    119.0 │\n",
+      "│      airfoil1 │      516.0 │      819.0 │        312.0 │       564.0 │             311.0 │            580.0 │    670.0 │   1222.0 │    397.0 │    632.0 │\n",
+      "│ netz4504_dual │      127.0 │      198.0 │         93.0 │       162.0 │             100.0 │            154.0 │    143.0 │    228.0 │    111.0 │    182.0 │\n",
+      "│         stufe │      123.0 │      228.0 │        107.0 │       188.0 │             112.0 │            197.0 │    151.0 │    282.0 │    130.0 │    246.0 │\n",
+      "│          3elt │      733.0 │     1168.0 │        381.0 │       645.0 │             418.0 │            651.0 │    817.0 │   1239.0 │    469.0 │    752.0 │\n",
+      "│        barth4 │      875.0 │     1306.0 │        454.0 │       677.0 │             429.0 │            687.0 │    954.0 │   1655.0 │    548.0 │    838.0 │\n",
+      "│       ukerbe1 │      225.0 │      374.0 │        124.0 │       215.0 │             125.0 │            241.0 │    311.0 │    517.0 │    126.0 │    237.0 │\n",
+      "│         crack │     1344.0 │     1861.0 │        777.0 │      1214.0 │             759.0 │           1276.0 │   1400.0 │   2166.0 │    883.0 │   1419.0 │\n",
+      "└───────────────┴────────────┴────────────┴──────────────┴─────────────┴───────────────────┴──────────────────┴──────────┴──────────┴──────────┴──────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "benchmark_recursive()\n"
    ]
   },
   {
@@ -93,6 +130,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mesh = \"ukerbe1\"\n",
+    "\n",
+    "# Read data\n",
+    "A, coords = getData(mesh);\n",
+    "\n",
     "# Create a Figure and Axis\n",
     "draw_graph(A, coords)"
    ]
@@ -184,38 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "begin\n",
-    "    includet(\"./Tools/recursive_bisection.jl\")\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"inertialPart\""
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "levels = 2\n",
     "method = \"inertialPart\""
@@ -223,194 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = size(A)[1];\n",
-    "levels_ = 2^levels;\n",
-    "index_ = 1:n;\n",
-    "p =  ones(Int, n);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A_ = A\n",
-    "parts_ = p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "recursion (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function recursion(A_, levels_, index_, count_)\n",
-    "    if levels_%2 == 0\n",
-    "        levels_ = levels_/2\n",
-    "\n",
-    "        if method == \"spectralPart\"\n",
-    "            p_ = spectral_part(A_)\n",
-    "        elseif method == \"inertialPart\"\n",
-    "            p_ = inertial_part(A_, coords)\n",
-    "        elseif method ==  \"coordinatePart\"\n",
-    "            p_ = coordinate_part(A_, coords)\n",
-    "        end\n",
-    "\n",
-    "        a1 = p_.==1\n",
-    "        a2 = p_.==2\n",
-    "\n",
-    "        A1_ = A_[a1, :]\n",
-    "        A2_ = A_[a2, :]\n",
-    "\n",
-    "        recursion(A1_, levels_, index_[a1], count_)\n",
-    "        recursion(A2_, levels_, index_[a2], count_+1)\n",
-    "    else\n",
-    "        p[index_] .= count_\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "ArgumentError: indexed assignment with a single value to possibly many locations is not supported; perhaps use broadcasting `.=` instead?",
-     "output_type": "error",
-     "traceback": [
-      "ArgumentError: indexed assignment with a single value to possibly many locations is not supported; perhaps use broadcasting `.=` instead?",
-      "",
-      "Stacktrace:",
-      " [1] setindex_shape_check(::Int64, ::Int64)",
-      "   @ Base ./indices.jl:261",
-      " [2] _unsafe_setindex!(#unused#::IndexLinear, A::Vector{Int64}, x::Int64, I::Vector{Int64})",
-      "   @ Base ./multidimensional.jl:925",
-      " [3] _setindex!",
-      "   @ ./multidimensional.jl:916 [inlined]",
-      " [4] setindex!(A::Vector{Int64}, v::Int64, I::Vector{Int64})",
-      "   @ Base ./abstractarray.jl:1399",
-      " [5] recursion(A_::SparseMatrixCSC{Float64, Int64}, levels_::Float64, index_::Vector{Int64}, count_::Int64)",
-      "   @ Main ./In[36]:22",
-      " [6] recursion(A_::SparseMatrixCSC{Float64, Int64}, levels_::Int64, index_::UnitRange{Int64}, count_::Int64)",
-      "   @ Main ./In[36]:19",
-      " [7] top-level scope",
-      "   @ In[37]:1"
-     ]
-    }
-   ],
-   "source": [
-    "recursion(A, levels, index, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Infiltrator.jl needs a fully-functional Julia REPL.\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "BoundsError: attempt to access 1-element Vector{UnitRange{Int64}} at index [[2, 2, 1, 1, 1, 1, 2, 2, 2, 2  …  1, 2, 1, 2, 2, 1, 2, 1, 2, 2]]",
-     "output_type": "error",
-     "traceback": [
-      "BoundsError: attempt to access 1-element Vector{UnitRange{Int64}} at index [[2, 2, 1, 1, 1, 1, 2, 2, 2, 2  …  1, 2, 1, 2, 2, 1, 2, 1, 2, 2]]",
-      "",
-      "Stacktrace:",
-      " [1] throw_boundserror(A::Vector{UnitRange{Int64}}, I::Tuple{Vector{Int64}})",
-      "   @ Base ./abstractarray.jl:744",
-      " [2] checkbounds",
-      "   @ ./abstractarray.jl:709 [inlined]",
-      " [3] _getindex",
-      "   @ ./multidimensional.jl:860 [inlined]",
-      " [4] getindex(A::Vector{UnitRange{Int64}}, I::Vector{Int64})",
-      "   @ Base ./abstractarray.jl:1296",
-      " [5] recursion(A_::SparseMatrixCSC{Float64, Int64}, parts_::Int64, index_::Int64)",
-      "   @ Main ./In[10]:16",
-      " [6] top-level scope",
-      "   @ In[14]:1"
-     ]
-    }
-   ],
-   "source": [
-    "recursion(A, p, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Infiltrator.jl needs a fully-functional Julia REPL.\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "BoundsError: attempt to access 1-element Vector{UnitRange{Int64}} at index [[2, 2, 1, 1, 1, 1, 2, 2, 2, 2  …  1, 2, 1, 2, 2, 1, 2, 1, 2, 2]]",
-     "output_type": "error",
-     "traceback": [
-      "BoundsError: attempt to access 1-element Vector{UnitRange{Int64}} at index [[2, 2, 1, 1, 1, 1, 2, 2, 2, 2  …  1, 2, 1, 2, 2, 1, 2, 1, 2, 2]]",
-      "",
-      "Stacktrace:",
-      " [1] throw_boundserror(A::Vector{UnitRange{Int64}}, I::Tuple{Vector{Int64}})",
-      "   @ Base ./abstractarray.jl:744",
-      " [2] checkbounds",
-      "   @ ./abstractarray.jl:709 [inlined]",
-      " [3] _getindex",
-      "   @ ./multidimensional.jl:860 [inlined]",
-      " [4] getindex",
-      "   @ ./abstractarray.jl:1296 [inlined]",
-      " [5] (::var\"#recursion#15\"{String, Int64, SparseMatrixCSC{Float64, Int64}, Matrix{Float64}, Vector{Float64}, Vector{UnitRange{Int64}}, Int64, Int64})(A_::SparseMatrixCSC{Float64, Int64}, parts_::Int64, index_::Int64)",
-      "   @ Main ~/Documents/Courses/Spring2024/HPC_Lab/project06/graph_part/Tools/recursive_bisection.jl:44",
-      " [6] rec_bisection(method::String, levels::Int64, A::SparseMatrixCSC{Float64, Int64}, coords::Matrix{Float64}, vn::Vector{Float64})",
-      "   @ Main ~/Documents/Courses/Spring2024/HPC_Lab/project06/graph_part/Tools/recursive_bisection.jl:51",
-      " [7] rec_bisection(method::String, levels::Int64, A::SparseMatrixCSC{Float64, Int64}, coords::Matrix{Float64})",
-      "   @ Main ~/Documents/Courses/Spring2024/HPC_Lab/project06/graph_part/Tools/recursive_bisection.jl:25",
-      " [8] top-level scope",
-      "   @ In[13]:1"
-     ]
-    }
-   ],
-   "source": [
-    "rec_bisection(method, levels, A, coords)"
+    "pRecursive = rec_bisection(method, levels, A, coords);"
    ]
   },
   {
@@ -419,8 +249,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pRecursive = rec_bisection(A);\n",
-    "edge_count = count_edge_cut(A, pRecursive);"
+    "edge_count = count_edge_cut(A, pRecursive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_graph(A, coords, pRecursive)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Methis alg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pMetis = metis_part(A, 2, :KWAY);\n",
+    "edge_count = count_edge_cut(A, pMetis);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_graph(A, coords, pMetis)"
    ]
   }
  ],
